# Interop

./: CMakeLists.txt  README.md
include/DroidSharp/: Interop.h  Logging.h
src/: Interop.c
